# python_games

./: .gitignore  README.md  launcher.py  main.py  plan.md  pyproject.toml
.github/workflows/: ci.yml
games/: __init__.py  base_game.py
games/paratrooper/: __init__.py  game.py
games/snake/: __init__.py  game.py
games/xonix/: __init__.py  game.py
sounds/: README.md
src/: launcher.py
src/common/: __init__.py  constants.py  high_scores.py  sound.py  ui.py
src/games/: __init__.py  base_game.py
src/games/paratrooper/: __init__.py  game.py
src/games/snake/: __init__.py  game.py
src/games/xonix/: __init__.py  game.py
tests/: __init__.py  conftest.py  test_base_game.py  test_games_structure.py  test_paratrooper_game.py  test_snake_game.py  test_xonix_game.py
tests/integration/: test_games_structure.py
tests/unit/common/: test_constants.py  test_ui.py
tests/unit/games/: test_base_game.py  test_paratrooper_game.py  test_paratrooper_logic.py  test_snake_game.py  test_snake_logic.py  test_xonix_game.py  test_xonix_logic.py
